# ChangeLog for media-plugins/gst-plugins-resindvd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-resindvd/ChangeLog,v 1.23 2011/01/30 19:03:28 armin76 Exp $

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-resindvd-0.10.19.ebuild:
  alpha/sparc stable

  18 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-resindvd-0.10.19.ebuild:
  Stable for HPPA (bug #346981).

  20 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-resindvd-0.10.19.ebuild:
  Stable on amd64 wrt bug #346981

  20 Dec 2010; Thomas Kahle <tomka@gentoo.org>
  gst-plugins-resindvd-0.10.19.ebuild:
  x86 stable per bug 346981

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-resindvd-0.10.18.ebuild:
  Stable for HPPA (bug #329703).

*gst-plugins-resindvd-0.10.19 (03 Aug 2010)

  03 Aug 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-resindvd-0.10.19.ebuild:
  Version bump. Avoids a (harmless) warning with newer gstreamer core, other
  clean ups

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-resindvd-0.10.18.ebuild:
  Marked ~hppa (bug #293572).

  17 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-resindvd-0.10.18.ebuild:
  Keyworded on alpha, bug #293572

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-resindvd-0.10.18.ebuild:
  x86 stable, bug 324691

  24 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-resindvd-0.10.18.ebuild:
  Stable on amd64 wrt bug #324691

  18 Apr 2010; Markus Meier <maekke@gentoo.org>
  gst-plugins-resindvd-0.10.17.ebuild:
  x86 stable, bug #308777

*gst-plugins-resindvd-0.10.18 (06 Apr 2010)

  06 Apr 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-resindvd-0.10.18.ebuild:
  Version bump. Fixes int alignment issues on ARM, re-uses more of
  gst-plugins-base code instead of temporary local copies
