@@ -1,15 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-resindvd/Attic/gst-plugins-resindvd-0.10.18.ebuild,v 1.6 2010/08/10 16:28:06 jer Exp $
-
-inherit gst-plugins-bad
-
-KEYWORDS="~alpha amd64 hppa ~ppc ~ppc64 ~sparc x86"
-IUSE=""
-
-RDEPEND=">=media-libs/libdvdnav-4.1.2
-	>=media-libs/gst-plugins-base-0.10.27"
-DEPEND="${RDEPEND}"
-
-# The configure option is dvdnav
-GST_PLUGINS_BUILD="dvdnav"
