@@ -1,0 +1,13 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-resindvd/gst-plugins-resindvd-0.10.21.ebuild,v 1.1 2011/04/13 10:20:21 leio Exp $
+
+inherit gst-plugins-bad
+
+KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+
+RDEPEND=">=media-libs/libdvdnav-4.1.2
+	>=media-libs/libdvdread-4.1.2
+	>=media-libs/gst-plugins-base-0.10.32"
+DEPEND="${RDEPEND}"
