@@ -1,11 +1,6 @@
-DIST gst-plugins-bad-0.10.14-kate-configure-fix.patch.bz2 822 RMD160 e8460849426b27755259c738ba25975787a4378b SHA1 a2c25c283b6a0d71b3627403de119153ab1acee3 SHA256 ce7ace661bf5d5e38f1c63b6b376c8a0b384cd5e00d084f23aebbb099b0c5dc9
-DIST gst-plugins-bad-0.10.14.tar.bz2 2781487 RMD160 51c7804f3d913b00f3ab87d814ae1188e3915803 SHA1 a09af51b3c06d10d86b29de48fbe57768525f977 SHA256 cd6811522302d8e7549990ccc0edd371f6695daa566b65f338079f5fa5ce6bd9
-DIST gst-plugins-bad-0.10.17.tar.bz2 2946258 RMD160 bc04e0d33d0f552290690a91c942bd1126286cf7 SHA1 9715e927765fcb836600975b9ea93c095bbb787e SHA256 531559d331d6802545b759e50fe5de28da147d0dcd5b9e883d87a6821fbd064a
-DIST gst-plugins-bad-0.10.18.tar.bz2 3028412 RMD160 0a7bfd2b90dc863798f5a254248a1b087dcf8f5a SHA1 33853ed4f3be8d80c42a2a8dcce7052a08c1d64f SHA256 2f800127e00da0f157358f87b06563b3de23cbc630fbf6295b43405e52e02070
 DIST gst-plugins-bad-0.10.19.tar.bz2 3009513 RMD160 f28beddcfc33d02da590271403385f06eacfe1c4 SHA1 3d5ca09f99371fb569ed029dcaef8119f0841821 SHA256 7b6c49f22caad3b573aee481381355b38ac9f2077f291d9f33a9a808a2568888
-EBUILD gst-plugins-schroedinger-0.10.14.ebuild 542 RMD160 6a3ecfd2d9009f231554d58874759bd3becd31ee SHA1 9edf0ec4ef71a298498127cd8f6fe5d67333d4bf SHA256 25049dda1e3285814a2f481a6f69475d77b0ca87185c349d48adbe405b7a3316
-EBUILD gst-plugins-schroedinger-0.10.17.ebuild 537 RMD160 e4c175a1dbfe85796030d03977425be562934d6b SHA1 5efb85e9dc9bca1b286d706eec4c3e3f71b5d481 SHA256 3506c297511743208d885dd71f6dd65766894cd21c2bdc2c29cd8ed47c2c6729
-EBUILD gst-plugins-schroedinger-0.10.18.ebuild 539 RMD160 82411e6082ba9d3a6d0f0d0d4b3669bc5c685a4d SHA1 803aadd66c67546a0a6e072f32b805995528e898 SHA256 6986487d375c541d7eb753a3c3d00303d73949bb380c9ce102f04e4e937788c4
+DIST gst-plugins-bad-0.10.21.tar.bz2 3429224 RMD160 b12f7a26fdbef06a1914d9a4192d2114855f41a1 SHA1 5bc4e5a1edff4bf22cbabc32cb87dc055b55c65a SHA256 422badacbda37ac33cb446c6751dabcd0b223c308dbb01024a34ded682fa47e3
 EBUILD gst-plugins-schroedinger-0.10.19.ebuild 679 RMD160 e9b0eecf46f5b49fa43aade11b11523b9fc60933 SHA1 5edb2dcb199cff6c37d2387a42fbc2ff6138a348 SHA256 a18a57ccffd8bccea086a1d7d160ed79b2c3df1b50e885322d2e5100c3e56a67
-MISC ChangeLog 1160 RMD160 026fea09cb798df44a0df981c229b53a78fa8688 SHA1 62d3c5f877101c15889f780f7cd4f6a1c40def8c SHA256 bf41e3dda9c383df954e8c84fbda05ea6897a42916bde195adcfcc4c9ea5ebf8
+EBUILD gst-plugins-schroedinger-0.10.21.ebuild 679 RMD160 f899d79f06beddb1a125aae9299b964af9210897 SHA1 5d70b9ae208770f85428f3e0248dd5d264e84ac7 SHA256 8a0b87663f02cde5c2f68b3ba2f7068b225d5e6ee28ea354b625ed48ae9987fe
+MISC ChangeLog 1464 RMD160 13b2ba25593959de72f4496d8a576dee8a365e8f SHA1 6d50341e095cd2ed770a305d56ad47b13fc70ea4 SHA256 febc09da956dba0ff7e9947c8d9be07128e09ffb8b2f1cb55fba4ce578067880
 MISC metadata.xml 164 RMD160 5d4062e422bbf6c0cb9f94a3282f6f31dd2ca54e SHA1 d9f131bae0f8e5ed9fe85e0f23c8883cf8886073 SHA256 63f0c98dbf90a122aa2c9bd6088d3b8a7de6b79f90558e53d175603207f1b01d
